--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <title>frontend</title>
   </head>
   <body>
-    blabla
+    blablabbbbb
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
